# Challenge_prototype

./: .gitignore  README.md  qual-log.txt
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  WavRecorder.ts  main.tsx
client/src/components/: BottomBar.tsx  LeftPanel.tsx  Map.tsx  TopBar.tsx
client/src/contexts/: context.ts
dataset with marketing manager/: README.md  calendar_events_fake.json  challenge.ipynb  drivers_dataset.json  historical_trips_full.json  trips_final_realistic.json
server/: example.env  extensions.py  main.py  pyproject.toml
server/agents/: driving_coach_agent.py  orchestrator_agent.py
server/db/: conversations.db
server/my_agents/: charging_station_agent.py  default_agent.py  driving_coach_agent.py  graph.py  memory_manager.py  nearby_results.csv  orchestrator_agent.py  scraper.py  test.py  trip_planning_expert_agent.py  workflow.py
server/propmt_refining_pipeline/: charging_station_agent.py  conversation_log.txt  critic_agent.py  pipeline.py
server/travel_log/: generate_travel_log.py  travel_log.csv
