[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "openai-agents[voice]>=0.5.1",
    "python-dotenv>=1.2.1",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
]
