[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "python-dotenv>=1.2.1",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "playwright>=1.57.0",
    "pandas>=2.3.3",
    "langgraph>=0.1.15",
    "langchain-nvidia-ai-endpoints>=0.1.2",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "aiosqlite>=0.20.0",
    "langchain-core>=0.2.10",
    "openai>=1.0.0",
]
